crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_mor_subcategory.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: "MorWord { pos: \"pro:sub\", lemma_features: \"I\" }"
  text: "pro:sub"
- kind: Whitespace
  text: " "
- kind: "MorWord { pos: \"det:art\", lemma_features: \"the\" }"
  text: "det:art"
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
