crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_participants.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Participants:\t"
- kind: ParticipantWord
  text: CHI
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Target_Child
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: MOT
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Mother
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: FAT
- kind: Whitespace
  text: " "
- kind: ParticipantWord
  text: Father
- kind: Newline
  text: "\n"
