crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_pho.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: PhoWord
  text: wɑ
- kind: PhoPlus
  text: +
- kind: PhoWord
  text: kɪŋ
- kind: Whitespace
  text: " "
- kind: PhoWord
  text: hɛloʊ
- kind: Whitespace
  text: " "
- kind: PhoWord
  text: "."
- kind: Newline
  text: "\n"
