crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_sin.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: SinWord
  text: "g:toy:dpoint"
- kind: Whitespace
  text: " "
- kind: SinWord
  text: hold
- kind: Whitespace
  text: " "
- kind: SinWord
  text: give
- kind: Newline
  text: "\n"
