crates/core/talkbank-parser-re2c/tests/snapshots/snapshot_tests__snapshot_types_content_isolated.snap
---
source: crates/talkbank-parser-re2c/tests/snapshot_tests.rs
expression: tokens
---
- kind: "TypesFields { design: \"cross\", activity: \"toyplay\", group: \"TD\" }"
  text: cross
- kind: Newline
  text: "\n"
